--- a/public/stylesheets/googlify.css
+++ b/public/stylesheets/googlify.css
@@ -32,11 +32,33 @@
   float: right;
 }
 
-.container {
+.separator {
   margin-top: 20%;
+}
+
+.container {
   float: center;
   width: 40%;
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+.result {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 800px;
+  margin-top: -10%;
+}
+
+.result img {
+  max-width: 800px;
+}
+
+.result form {
+  margin-left: 8%;
+}
+
+.hidden {
+  display: none;
 }
