--- a/public/stylesheets/googlify.css
+++ b/public/stylesheets/googlify.css
@@ -1,6 +1,6 @@
 .home-menu.pure-menu-open {
   background: #2d3e50;
-  height: 15%;
+  height: 100px;
 }
 
 .home-menu.pure-menu-open img {
@@ -47,16 +47,13 @@
 .result {
   margin-left: auto;
   margin-right: auto;
-  max-width: 800px;
+  width: 800px;
   margin-top: -10%;
+  text-align: center;
 }
 
 .result img {
-  max-width: 800px;
-}
-
-.result form {
-  margin-left: 8%;
+  display: inline-block;
 }
 
 .hidden {
