--- a/public/stylesheets/googlify.css
+++ b/public/stylesheets/googlify.css
@@ -24,6 +24,10 @@
   z-index: 4;
 }
 
+.home-menu.pure-menu-open ul {
+  font-size: 1.5em;
+}
+
 .home-menu .pure-menu-heading {
   color: white;
   font-weight: 400;
@@ -62,6 +66,10 @@
 
 .spinner {
   padding-bottom: 10%;
+}
+
+.button-success {
+  background: rgb(27, 174, 62);
 }
 
 /* Mobile styles */
