--- a/lib/googly_eyes/views/footer.erb
+++ b/lib/googly_eyes/views/footer.erb
@@ -14,7 +14,7 @@
       </ul>
 
       <ul class="footer-social">
-        <li><a href="https://twitter.com/Elhu)">
+        <li><a href="https://twitter.com/Elhu">
           <i class="fa fa-twitter"></i>
         </a></li>
         <li><a href="https://github.com/elhu">
