--- a/lib/googly_eyes/views/index.erb
+++ b/lib/googly_eyes/views/index.erb
@@ -7,6 +7,7 @@
     <link media="all" type="text/css" rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" />
     <link media="all" type="text/css" rel="stylesheet" href="/css/application.css" />
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= js :application %>
   </head>
   <body>
@@ -15,7 +16,7 @@
       <%= erb :result %>
       <%= erb :spinner %>
       <%= erb :form %>
-      <%= erb :footer %>
     </div>
+    <%= erb :footer %>
   </body>
 </html>
